@@ -2416,7 +2416,10 @@
               class="XRef">Command Line Options</a>).</li>
 
               <li class="Body">The following table shows which properties
-              apply to which project types.</li>
+              apply to which project types.  The <em
+              class="Code">static</em> property (not represented in the
+              table) is set if the -static option is supplied when
+              processing the project files.</li>
 
               <li class="Body">
                 <h6 class="NumberedTableTitle"><a name=
